@@ -33,6 +33,7 @@ import com.linkedin.venice.writer.update.UpdateBuilderImpl;
 import java.io.Closeable;
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.EnumMap;
@@ -215,7 +216,8 @@ public class MetaStoreWriter implements Closeable {
       // Construct an update
       UpdateBuilder updateBuilder = new UpdateBuilderImpl(this.derivedComputeSchema);
       updateBuilder.setNewFieldValue("timestamp", System.currentTimeMillis());
-      updateBuilder.setElementsToAddToListField("storeValueSchemaIdsWrittenPerStoreVersion", List.of(valueSchemaId));
+      updateBuilder
+          .setElementsToAddToListField("storeValueSchemaIdsWrittenPerStoreVersion", Arrays.asList(valueSchemaId));
       return updateBuilder.build();
     });
   }
